syntax = "proto3";
option java_multiple_files = true;
option java_outer_classname = "ProtobufBitfinex";

package proto.bitfinex;

import "common.proto";
import "event-store.proto";


message BitfinexConfig {
    string websocketConnectionURL = 1;
    string publicKey = 2;
    string privateKey = 3;
}

message BitfinexCollectorConfig {
    proto.common.ServiceAddress eventStoreConfig = 1;
    int32 port = 2;
    BitfinexConfig bitfinexConfig = 3;
    repeated proto.common.Pair trades = 4;
    repeated proto.common.Pair orders = 5;
}